Upload second version of the project

--- a/src/views/layouts/index.njk
+++ b/src/views/layouts/index.njk
@@ -550,17 +550,23 @@
             </p>
             <ul class="footer__policy-terms">
               <li class="footer__term">
-                <a class="base-link footer__term-link" href="#"
+                <a
+                  class="base-link footer__term-link"
+                  href="/privacy-policy.njk"
                   >Privacy Policy</a
                 >
               </li>
               <li class="footer__term">
-                <a class="base-link footer__term-link" href="#"
+                <a
+                  class="base-link footer__term-link"
+                  href="/privacy-policy.njk"
                   >Rules for the processing of personal data</a
                 >
               </li>
               <li class="footer__term">
-                <a class="base-link footer__term-link" href="#"
+                <a
+                  class="base-link footer__term-link"
+                  href="/privacy-policy.njk"
                   >Website Terms of Use</a
                 >
               </li>
