--- a/src/views/layouts/privacy-policy.njk
+++ b/src/views/layouts/privacy-policy.njk
@@ -50,7 +50,7 @@
                 >
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="#feedback"
+                <a class="base-link header__nav-link" href="#contacts"
                   >Contacts</a
                 >
               </li>
