--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -1,14 +1,4 @@
 ---
 permalink: "/"
-layout: "base.njk"
+layout: "index.njk"
 ---
-
-{% import "forms.njk" as forms %}
-{% import "sprite.njk" as sprite %}
-
-<h1>Test</h1>
-{{ navigation.links[0].name }}
-{{ sprite.svg('main', 'user', 200, 200) }}
-{{ sprite.svg('main', 'user3', 200, 200) }}
-
-{{ forms.field('login', 'login', forms.input('login', 'Login', '', 'email')) }}
