Upload third version of the project

--- a/src/resources/scss/blocks/_form.scss
+++ b/src/resources/scss/blocks/_form.scss
@@ -68,7 +68,7 @@
     left: 94%;
     width: 24px;
     height: 24px;
-    background-image: url('/src/resources/images/feedback-page/Calendar_Week.svg');
+    // background-image: url('/src/resources/images/feedback-page/Calendar_Week.svg');
   }
 
   &__datepicker-input {
@@ -118,13 +118,23 @@
     position: relative;
     display: inline-block;
 
-    &::after {
-      position: absolute;
-      top: 10%;
-      left: 95%;
-      content: url('/src/resources/images/feedback-page/Caret_Down.svg');
-      pointer-events: none;
-    }
+    // &::after {
+    //   position: absolute;
+    //   top: 10%;
+    //   left: 95%;
+    //   content: url('/src/resources/images/feedback-page/Caret_Down.svg');
+    //   pointer-events: none;
+    //   outline: 1px solid red;
+    // }
+  }
+
+  &__select-caret {
+    position: absolute;
+    top: 10%;
+    left: 95%;
+    width: 24px;
+    height: 24px;
+    pointer-events: none;
   }
 
   &__select-area {
