--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -2,3 +2,10 @@
 permalink: "/"
 layout: "index.njk"
 ---
+
+{% import "forms.njk" as forms %}
+{% import "sprite.njk" as sprite %}
+
+{{ sprite.svg('main', 'Calendar_Week', 24, 24) }}
+{{ sprite.svg('main', 'Caret_Down', 24, 24) }}
+
