--- a/src/views/pages/privacy-policy.njk
+++ b/src/views/pages/privacy-policy.njk
@@ -2,3 +2,6 @@
 permalink: "/privacy-policy.njk"
 layout: "privacy-policy.njk"
 ---
+
+{% import "forms.njk" as forms %}
+{% import "sprite.njk" as sprite %}
