--- a/src/views/pages/index.njk
+++ b/src/views/pages/index.njk
@@ -6,6 +6,11 @@ layout: "index.njk"
 {% import "forms.njk" as forms %}
 {% import "sprite.njk" as sprite %}
 
-{{ sprite.svg('main', 'Calendar_Week', 24, 24) }}
-{{ sprite.svg('main', 'Caret_Down', 24, 24) }}
-
+{{ sprite.svg('form1', 'Calendar_Week', 24, 24) }}
+{{ sprite.svg('form2', 'Caret_Down', 24, 24) }}
+{{ sprite.svg('social1', 'facebook', 24, 24) }}
+{{ sprite.svg('social2', 'instagram', 24, 24) }}
+{{ sprite.svg('social3', 'twitter', 24, 24) }}
+{{ sprite.svg('social4', 'linkedin', 24, 24) }}
+{{ sprite.svg('social5', 'telegram', 24, 24) }}
+{{ sprite.svg('social6', 'whatsapp', 24, 24) }}
