Upload fifth version of the project

--- a/src/views/layouts/privacy-policy.njk
+++ b/src/views/layouts/privacy-policy.njk
@@ -37,20 +37,20 @@
             <label for="nav-list_toggle" class="header__nav-toggle"> ☰ </label>
             <ul class="header__nav-list">
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="#about">About</a>
+                <a class="base-link header__nav-link" href="/">About</a>
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="#services"
+                <a class="base-link header__nav-link" href="/"
                   >Services</a
                 >
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="#founder"
+                <a class="base-link header__nav-link" href="/"
                   >Founder</a
                 >
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="#contacts"
+                <a class="base-link header__nav-link" href="/"
                   >Contacts</a
                 >
               </li>
