Upload sixth version of the project

--- a/src/views/layouts/privacy-policy.njk
+++ b/src/views/layouts/privacy-policy.njk
@@ -12,7 +12,7 @@
     <section class="header">
       <div class="header__content">
         <div class="header__main-menu">
-          <a href="#">
+          <a href="/">
             <picture class="header__logo-box">
               <source
                 srcset="src/resources/images/head-page/logo-img.webp"
@@ -37,22 +37,16 @@
             <label for="nav-list_toggle" class="header__nav-toggle"> ☰ </label>
             <ul class="header__nav-list">
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/">About</a>
+                <a class="base-link header__nav-link" href="/#about">About</a>
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/"
-                  >Services</a
-                >
+                <a class="base-link header__nav-link" href="/#services">Services</a>
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/"
-                  >Founder</a
-                >
+                <a class="base-link header__nav-link" href="/#founder">Founder</a>
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/"
-                  >Contacts</a
-                >
+                <a class="base-link header__nav-link" href="/#feedback">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -382,7 +376,7 @@
           </div>
         </div>
         <div class="footer__lower-part">
-          <a href="#">
+          <a href="/">
             <picture class="footer__logo-box">
               <source
                 srcset="src/resources/images/footer-page/logo-footer-img.webp"
