--- a/src/views/layouts/index.njk
+++ b/src/views/layouts/index.njk
@@ -131,7 +131,7 @@
           <picture class="about__decor-wrapper">
             <source
               srcset="src/resources/images/about-us-page/Frame-mobile.svg"
-              media="(orientation: portrait)"
+              media="(max-width: 640px)"
               type="image/svg+xml"
               class="about__decor-element"
             />
@@ -162,7 +162,7 @@
           <picture class="services__decor-wrapper">
             <source
               srcset="src/resources/images/services-page/frame-mobile.svg"
-              media="(orientation: portrait)"
+              media="(max-width: 640px)"
               type="image/svg+xml"
               class="services__decor-element"
             />
