--- a/src/views/layouts/privacy-policy.njk
+++ b/src/views/layouts/privacy-policy.njk
@@ -40,13 +40,19 @@
                 <a class="base-link header__nav-link" href="/#about">About</a>
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/#services">Services</a>
+                <a class="base-link header__nav-link" href="/#services"
+                  >Services</a
+                >
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/#founder">Founder</a>
+                <a class="base-link header__nav-link" href="/#founder"
+                  >Founder</a
+                >
               </li>
               <li class="header__nav-item">
-                <a class="base-link header__nav-link" href="/#feedback">Contacts</a>
+                <a class="base-link header__nav-link" href="/#feedback"
+                  >Contacts</a
+                >
               </li>
             </ul>
           </nav>
