--- a/src/resources/scss/blocks/_feedback.scss
+++ b/src/resources/scss/blocks/_feedback.scss
@@ -14,7 +14,7 @@
 
   &__content {
     display: flex;
-    gap: 2.5vw;
+    gap: clamp(1em, 2.5vw, 3em);
     max-width: 1200px;
     margin: 0 auto;
     padding: 120px 2.5vw 100px;
@@ -31,7 +31,7 @@
   &__cont-email,
   &__cont-phone {
     margin: 0;
-    margin-bottom: 2.6vw;
+    margin-bottom: 2rem;
     font-size: clamp(35px, 5.3vw, 66px);
     line-height: 0.9;
   }
@@ -41,15 +41,20 @@
   }
 
   &__section-header {
-    margin-bottom: 5.3vw;
+    margin-bottom: 4rem;
     font-size: clamp(75px, 10.7vw, 130px);
     line-height: 0.9;
   }
 
-  @container (width <= 1000px) {
+  @container (width <= 900px) {
     &__content {
       flex-direction: column;
       max-width: max-content;
+    }
+
+    &__cont-email,
+    &__cont-phone {
+      margin-bottom: 1rem;
     }
 
     &__section-header {
@@ -57,7 +62,7 @@
     }
   }
 
-  @media only screen and (orientation: portrait) {
+  @media only screen and (max-width: 640px) {
     &__section-header {
       display: none;
     }
@@ -65,6 +70,7 @@
     &__content {
       flex-direction: column;
       max-width: fit-content;
+      max-width: min-content;
       margin: 0 auto;
       margin-top: 53px;
       padding: 0;
