--- a/src/resources/scss/blocks/_form.scss
+++ b/src/resources/scss/blocks/_form.scss
@@ -7,7 +7,6 @@
   gap: 24px;
   justify-content: space-between;
   box-sizing: border-box;
-  min-width: 380px;
   padding: 36px;
   padding-top: 32px;
   padding-bottom: 27px;
@@ -17,7 +16,7 @@
 
   &__title {
     margin-bottom: 12px;
-    font-size: clamp(60px, 5.3vw, 66px);
+    font-size: clamp(50px, 5.3vw, 66px);
     line-height: 0.9;
   }
 
@@ -175,12 +174,12 @@
     margin-top: 17px;
   }
 
-  @media only screen and (orientation: portrait) {
-    flex: unset;
+  @media only screen and (max-width: 640px) {
+    flex: 1;
     gap: 16px;
     align-items: center;
     justify-content: flex-start;
-    min-width: 288px;
+    width: 100%;
     margin: 0 auto;
     padding: 16px;
     border-radius: 24px;
@@ -196,7 +195,7 @@
 
     &__area {
       box-sizing: border-box;
-      width: clamp(275px, 70vw, 500px);
+      width: clamp(230px, 70vw, 500px);
       margin-right: 0;
       padding-bottom: 5px;
       font-size: 16px;
