Upload seventh version of the project

--- a/src/resources/scss/blocks/_feedback.scss
+++ b/src/resources/scss/blocks/_feedback.scss
@@ -62,7 +62,7 @@
     }
   }
 
-  @media only screen and (max-width: 640px) {
+  @media (width <= 640px) {
     &__section-header {
       display: none;
     }
