--- a/src/resources/scss/blocks/_about.scss
+++ b/src/resources/scss/blocks/_about.scss
@@ -143,8 +143,7 @@
     margin-left: 124px;
   }
 
-
-  @media only screen and (max-width: 640px) {
+  @media (width <= 640px) {
     &__content {
       min-width: 288px;
       max-width: 60vw;
