--- a/src/resources/scss/blocks/_form.scss
+++ b/src/resources/scss/blocks/_form.scss
@@ -174,7 +174,7 @@
     margin-top: 17px;
   }
 
-  @media only screen and (max-width: 640px) {
+  @media (width <= 640px) {
     flex: 1;
     gap: 16px;
     align-items: center;
