--- a/src/resources/scss/blocks/_founder.scss
+++ b/src/resources/scss/blocks/_founder.scss
@@ -64,7 +64,7 @@
     margin-left: clamp(100px, 17vw, 200px);
   }
 
-  @media only screen and (max-width: 640px) {
+  @media (width <= 640px) {
     &__decorative-element {
       display: none;
     }
