--- a/src/resources/scss/blocks/_header.scss
+++ b/src/resources/scss/blocks/_header.scss
@@ -88,8 +88,8 @@
   &__lower-part {
     display: flex;
     flex-direction: column;
-    margin-left: 30px;
     max-width: fit-content;
+    margin-left: 30px;
   }
 
   &__title {
@@ -142,7 +142,7 @@
     margin-top: 32px;
   }
 
-  @media only screen and (max-width: 600px) {
+  @media (width <= 600px) {
     &__content {
       display: grid;
       grid-template-rows: repeat(1, auto 1fr);
@@ -192,10 +192,10 @@
       right: 20px;
       display: none;
       flex-direction: column;
-      margin-left: unset;
       gap: unset;
       align-items: flex-end;
       width: 70px;
+      margin-left: unset;
     }
 
     #nav-list-toggle:checked + &__nav-toggle + &__nav-list {
@@ -207,11 +207,11 @@
     }
 
     &__lower-part {
+      justify-self: center;
+      max-width: min-content;
       margin: 0;
       margin-right: clamp(0px, 0.4rem, 20px);
       margin-left: clamp(0px, 0.4rem, 20px);
-      justify-self: center;
-      max-width: min-content;
     }
 
     &__title {
