--- a/src/resources/scss/blocks/_services.scss
+++ b/src/resources/scss/blocks/_services.scss
@@ -125,7 +125,7 @@
     }
   }
 
-  @media only screen and (max-width: 640px) {
+  @media (width <= 640px) {
     &__content {
       max-width: fit-content;
       margin: 0 auto;
