Upload 13th version of the project

--- a/src/views/layouts/base.njk
+++ b/src/views/layouts/base.njk
@@ -1,3 +1,4 @@
+{% import "sprite.njk" as sprite %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,7 +15,7 @@
       <div class="header__wrapper">
         <div class="header__content">
           <div class="header__main-menu">
-            <a href="#">
+            <a href="/">
               <picture class="header__logo-box">
                 <source
                   srcset="src/resources/images/head-page/logo-img.webp"
@@ -186,7 +187,7 @@
             </div>
           </div>
           <div class="footer__lower-part">
-            <a href="#">
+            <a href="/">
               <picture class="footer__logo-box">
                 <source
                   srcset="src/resources/images/footer-page/logo-footer-img.webp"
